{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 29,
  "lineage": "73ccd8da-be2d-95c8-4134-a93a86e5d92b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:internet-gateway/igw-051441a995de4c345",
            "id": "igw-051441a995de4c345",
            "owner_id": "748880526031",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051441a995de4c345",
            "id": "r-rtb-017d6fbb9c1a9059c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017d6fbb9c1a9059c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:route-table/rtb-05f4368a318a28460",
            "id": "rtb-05f4368a318a28460",
            "owner_id": "748880526031",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:route-table/rtb-0fd1790c99823a519",
            "id": "rtb-0fd1790c99823a519",
            "owner_id": "748880526031",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:route-table/rtb-05ca93a41edddb580",
            "id": "rtb-05ca93a41edddb580",
            "owner_id": "748880526031",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:route-table/rtb-017d6fbb9c1a9059c",
            "id": "rtb-017d6fbb9c1a9059c",
            "owner_id": "748880526031",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011683ba8387f91c8",
            "route_table_id": "rtb-05f4368a318a28460",
            "subnet_id": "subnet-0021a8b98395b4818"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7753e9537accfda",
            "route_table_id": "rtb-0fd1790c99823a519",
            "subnet_id": "subnet-0160287079ad150dd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05718792e3ad5404e",
            "route_table_id": "rtb-05ca93a41edddb580",
            "subnet_id": "subnet-027170a1204666563"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f869f151f48c84c",
            "route_table_id": "rtb-017d6fbb9c1a9059c",
            "subnet_id": "subnet-0c39a8f43311aee27"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065a97ad473c327f2",
            "route_table_id": "rtb-017d6fbb9c1a9059c",
            "subnet_id": "subnet-039501d0410753fbd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d0fb5c41c85f50d",
            "route_table_id": "rtb-017d6fbb9c1a9059c",
            "subnet_id": "subnet-0302fb31733922208"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:subnet/subnet-0021a8b98395b4818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0021a8b98395b4818",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748880526031",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:subnet/subnet-0160287079ad150dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0160287079ad150dd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748880526031",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:subnet/subnet-027170a1204666563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-027170a1204666563",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748880526031",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:subnet/subnet-0c39a8f43311aee27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0c39a8f43311aee27",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "748880526031",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:subnet/subnet-039501d0410753fbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-039501d0410753fbd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "748880526031",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:subnet/subnet-0302fb31733922208",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0302fb31733922208",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "748880526031",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "vpc_id": "vpc-056dbaf0e36513781"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:748880526031:vpc/vpc-056dbaf0e36513781",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-058c02ca0b138cb3a",
            "default_route_table_id": "rtb-0ce2e7b7e9d620e48",
            "default_security_group_id": "sg-0e93ad7c0df0529da",
            "dhcp_options_id": "dopt-68b8e410",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-056dbaf0e36513781",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ce2e7b7e9d620e48",
            "owner_id": "748880526031",
            "tags": {
              "Name": "levelup-tf-eks-demo-vpc"
            },
            "tags_all": {
              "Name": "levelup-tf-eks-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}